--- a/myreader-frontend/src/templates/subscriptions.html
+++ b/myreader-frontend/src/templates/subscriptions.html
@@ -1,25 +1,19 @@
-<md-subheader class="md-primary my-subheader">
-    <div layout="row" layout-align="end">
-        <div flex="85" flex-md="95" flex-sm="95" flex-xs="92">
-            <my-search-input
-                    my-value="searchKey"
-                    my-on-change="onSearchChange(value)"
-                    my-on-clear="onSearchClear()">
-            </my-search-input>
-        </div>
-        <div flex="15" flex-md="5" flex-sm="5" flex-xs="8">
-            <div layout="row" layout-align="end">
-                <md-button
-                        aria-label="Refresh"
-                        class="md-icon-button">
-                    <my-icon my-type="refresh"
-                             ng-click="refresh()">
-                    </my-icon>
-                </md-button>
-            </div>
-        </div>
-    </div>
-</md-subheader>
+<div class="search-panel">
+    <my-search-input
+            class="search-input"
+            my-value="searchKey"
+            my-on-change="onSearchChange(value)"
+            my-on-clear="onSearchClear()">
+    </my-search-input>
+
+    <md-button
+            aria-label="Refresh"
+            class="md-icon-button">
+        <my-icon my-type="refresh"
+                 ng-click="refresh()">
+        </my-icon>
+    </md-button>
+</div>
 
 <md-list>
     <md-list-item ng-click="open(subscription)" md-no-ink class="md-2-line" ng-repeat="subscription in data.subscriptions | filter: searchKey">
