Encapsulate feed component specific styles in component.

--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -16,7 +16,7 @@
                ng-model="$ctrl.feed.url"
                my-backend-validation my-validations="$ctrl.validations">
 
-        <my-icon class="my-feed-detail-url-icon"
+        <my-icon class="my-feed__url-icon"
                  my-type="open-in-new"
                  my-safe-opener url="{{$ctrl.feed.url}}">
         </my-icon>
