Replace SafeOpenerDirective with attribute rel="noopener noreferrer".

--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.css
@@ -1,5 +1,6 @@
 .my-entry-title__title {
-    cursor: pointer;
+    color: rgba(0,0,0,0.87);
+    text-decoration: none;
 }
 
 .my-entry-title__subtitle {
