--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
@@ -1,2 +1,7 @@
-<h3 class="my-entry-title__title" my-safe-opener url="{{$ctrl.item.origin}}" ng-bind-html="$ctrl.item.title"></h3>
+<h3>
+    <a class="my-entry-title__title" ng-href="{{$ctrl.item.origin}}" target="_blank" rel="noopener noreferrer">
+        {{$ctrl.item.title}}
+    </a>
+</h3>
+
 <h4 class="my-entry-title__subtitle">{{$ctrl.item.createdAt | timeago}} on <span ng-bind-html="$ctrl.item.feedTitle"></span></h4>
