--- a/myreader-frontend/src/templates/subscriptions.html
+++ b/myreader-frontend/src/templates/subscriptions.html
@@ -1,32 +1,38 @@
 <div class="search-panel">
-    <my-search-input
-            class="search-input"
-            my-value="searchKey"
-            my-on-change="onSearchChange(value)"
-            my-on-clear="onSearchClear()">
-    </my-search-input>
+    <div layout="row">
+        <my-search-input
+                class="search-input"
+                my-value="searchKey"
+                my-on-change="onSearchChange(value)"
+                my-on-clear="onSearchClear()">
+        </my-search-input>
 
-    <md-button
-            aria-label="Refresh"
-            class="md-icon-button">
-        <my-icon my-type="refresh"
-                 ng-click="refresh()">
-        </my-icon>
-    </md-button>
+        <md-button
+                aria-label="Refresh"
+                class="md-icon-button">
+            <my-icon my-type="refresh"
+                     ng-click="refresh()">
+            </my-icon>
+        </md-button>
+    </div>
 </div>
 
-<md-list>
-    <md-list-item ng-click="open(subscription)" md-no-ink class="md-2-line" ng-repeat="subscription in data.subscriptions | filter: searchKey">
-        <div layout="row">
-            <div class="md-list-item-text">
-                <div>
-                    <h3 ng-click="navigateToDetailPage(entry)" tabindex="-1" ng-bind-html="subscription.title"></h3>
-                    <h4>
-                        {{::subscription.createdAt | timeago}}
-                    </h4>
+<div class="my-list-wrapper">
+    <div class="my-list">
+        <md-list>
+            <md-list-item ng-click="open(subscription)" md-no-ink class="md-2-line" ng-repeat="subscription in data.subscriptions | filter: searchKey">
+                <div layout="row">
+                    <div class="md-list-item-text">
+                        <div>
+                            <h3 ng-click="navigateToDetailPage(entry)" tabindex="-1" ng-bind-html="subscription.title"></h3>
+                            <h4>
+                                {{::subscription.createdAt | timeago}}
+                            </h4>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <md-divider></md-divider>
-    </md-list-item>
-</md-list>
+                <md-divider></md-divider>
+            </md-list-item>
+        </md-list>
+    </div>
+</div>
