--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -38,6 +38,7 @@
         <my-list class="md-default-theme">
             <my-list-item ng-class="{{isFocused(entry)}}"
                           class="my-2-line"
+                          tabindex="-1"
                           my-scroll-into-view="isFocused(entry)"
                           ng-repeat="entry in data.entries">
                 <div class="my-no-style my-list-item-inner">
