Fetch more entries as soon as "load more" button scrolls into viewport.

--- a/myreader-frontend/src/app/js/shared/component/load-more/load-more.component.html
+++ b/myreader-frontend/src/app/js/shared/component/load-more/load-more.component.html
@@ -1,3 +1,5 @@
-<md-button ng-if="$ctrl.next" ng-disabled="$ctrl.disabled"
-           ng-click="$ctrl.onClick()">load more
+<md-button ng-if="$ctrl.next"
+           ng-disabled="$ctrl.disabled"
+           ng-click="$ctrl.onClick()"
+           my-click-if-in-view>load more
 </md-button>
