Integrate Redux into SettingsComponent for reading and writing settings.

--- a/myreader-frontend/src/app/js/settings/settings.component.html
+++ b/myreader-frontend/src/app/js/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="settings">
     <label for="pageSize">Entry page size</label>
-    <md-select id="pageSize" ng-model="$ctrl.currentSize" ng-change="$ctrl.save()">
+    <md-select id="pageSize" ng-model="$ctrl.pageSize" ng-change="$ctrl.save()">
         <md-option ng-value="10">10</md-option>
         <md-option ng-value="20">20</md-option>
         <md-option ng-value="30">30</md-option>
