--- a/myreader-frontend/src/templates/navigation-admin.html
+++ b/myreader-frontend/src/templates/navigation-admin.html
@@ -25,5 +25,6 @@
         </div>
     </md-toolbar>
 
+    <my-toast></my-toast>
     <md-content class="my-content" ui-view="content" md-scroll-y flex layout-padding></md-content>
 </div>
