--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -32,7 +32,7 @@
                 my-type="primary"
                 my-text="Save"
                 my-on-click="$ctrl.onSave()"
-                my-on-success="$ctrl.onSuccessSave()"
+                my-on-success="$ctrl.onSuccessSave('Feed saved')"
                 my-on-error="$ctrl.onError(error)">
         </my-button>
         <my-button
@@ -44,8 +44,6 @@
                 my-on-error="$ctrl.onError(error)">
         </my-button>
     </my-button-group>
-
-    <my-notification-panel layout="row" layout-align="end center" my-message="$ctrl.message"></my-notification-panel>
 </form>
 
 <div>
