--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -36,7 +36,6 @@
             <li class="my-warn">
                 <md-button ng-click="logout()">logout</md-button>
             </li>
-            <my-notification-panel layout="row" my-message="message"></my-notification-panel>
         </ul>
     </md-content>
 </md-sidenav>
@@ -51,5 +50,6 @@
         </div>
     </md-toolbar>
 
+    <my-toast></my-toast>
     <md-content class="my-content" ui-view="content" md-scroll-y flex layout-padding></md-content>
 </div>
