Incorporate Redux store into MaintenanceActionsComponent.

--- a/myreader-frontend/src/app/js/maintenance/maintenance-actions/maintenance-actions.component.html
+++ b/myreader-frontend/src/app/js/maintenance/maintenance-actions/maintenance-actions.component.html
@@ -4,8 +4,6 @@
     <my-button
             my-type="primary"
             my-text="Refresh index"
-            my-on-click="$ctrl.onRefreshIndex()"
-            my-on-success="$ctrl.onSuccessRefreshIndex('Refreshing index')"
-            my-on-error="$ctrl.onErrorRefreshIndex(error)">
+            my-on-click="$ctrl.onRefreshIndex()">
     </my-button>
 </my-button-group>
