--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -46,7 +46,7 @@
                 </div>
             </my-list-item>
             <my-list-item>
-                <my-load-more my-next="data.next()" my-on-more="loadMore(more)"></my-load-more>
+                <my-load-more my-next="data.links.next" my-on-more="loadMore(more)"></my-load-more>
             </my-list-item>
         </my-list>
     </div>
