--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -5,14 +5,14 @@
         <ul class="subscription-tag-menu">
 
             <my-navigation-subscription-item
-                                        ng-repeat="item in data.tags"
+                                        ng-repeat="item in data.tags track by trackBy(item)"
                                         my-item="item"
                                         my-on-select="onSelect(selected)"
                                         my-selected="currentSelected">
             </my-navigation-subscription-item>
 
             <my-navigation-subscription-item
-                                        ng-repeat="item in data.subscriptions"
+                                        ng-repeat="item in data.subscriptions track by trackBy(item)"
                                         my-item="item"
                                         my-on-select="onSelect(selected)"
                                         my-selected="currentSelected">
