--- a/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
+++ b/myreader-frontend/src/app/js/entry/entry-title/entry-title.component.html
@@ -1,5 +1,5 @@
-<h3>
-    <a class="my-entry-title__title" ng-href="{{$ctrl.item.origin}}" target="_blank" rel="noopener noreferrer">
+<h3 class="my-entry-title__title">
+    <a ng-href="{{$ctrl.item.origin}}" target="_blank" rel="noopener noreferrer">
         {{$ctrl.item.title}}
     </a>
 </h3>
