--- a/myreader-frontend/src/app/js/entry/entry.component.html
+++ b/myreader-frontend/src/app/js/entry/entry.component.html
@@ -1,5 +1,4 @@
-<div class="my-list-item-text"> <!-- TODO remove class my-list-item-text after redesign -->
-
+<div class="my-entry">
     <div layout="row">
         <my-entry-title flex="100"
                         my-item="$ctrl.item">
