--- a/myreader-frontend/src/templates/bookmark-entries.html
+++ b/myreader-frontend/src/templates/bookmark-entries.html
@@ -11,16 +11,6 @@
 
 <div class="my-list-wrapper">
     <div class="my-list">
-        <my-list class="md-default-theme">
-            <my-list-item class="my-2-line" ng-repeat="entry in data.entries">
-                <div class="my-no-style my-list-item-inner">
-                    <my-entry my-item="entry"></my-entry>
-                    <my-divider class="my-default-theme"></my-divider>
-                </div>
-            </my-list-item>
-            <my-list-item>
-                <my-load-more my-next="data.links.next" my-on-more="loadMore(more)"></my-load-more>
-            </my-list-item>
-        </my-list>
+        <my-entry-list></my-entry-list>
     </div>
 </div>
