--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -51,5 +51,5 @@
     </md-toolbar>
 
     <my-toast></my-toast>
-    <md-content class="my-content" ui-view="content" md-scroll-y flex layout-padding></md-content>
+    <md-content class="my-content" ui-view="content" flex layout-padding></md-content>
 </div>
