--- a/myreader-frontend/src/templates/subscriptions.html
+++ b/myreader-frontend/src/templates/subscriptions.html
@@ -20,7 +20,7 @@
 <div class="my-list-wrapper">
     <div class="my-list">
         <md-list>
-            <md-list-item ng-click="open(subscription)" md-no-ink class="md-2-line" ng-repeat="subscription in data.subscriptions | filter: searchKey">
+            <md-list-item ng-click="open(subscription)" md-no-ink class="md-2-line" ng-repeat="subscription in subscriptions | filter: searchKey">
                 <div layout="row">
                     <div class="md-list-item-text">
                         <div>
