--- a/myreader-frontend/src/templates/navigation-admin.html
+++ b/myreader-frontend/src/templates/navigation-admin.html
@@ -9,9 +9,7 @@
             <li>
                 <md-button ng-click="navigateTo('admin.feed')">Feeds</md-button>
             </li>
-            <li class="my-warn">
-                <md-button ng-click="logout()">logout</md-button>
-            </li>
+            <my-logout></my-logout>
         </ul>
     </md-content>
 </md-sidenav>
