--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -33,9 +33,7 @@
             <li class="my-raised">
                 <md-button ng-click="navigateTo('app.subscription-add')">Add subscription</md-button>
             </li>
-            <li class="my-warn">
-                <md-button ng-click="logout()">logout</md-button>
-            </li>
+            <my-logout></my-logout>
         </ul>
     </md-content>
 </md-sidenav>
