Fix padding between navigation and content area.

--- a/myreader-frontend/src/app/js/bookmark/bookmark-tags/bookmark-tags.component.css
+++ b/myreader-frontend/src/app/js/bookmark/bookmark-tags/bookmark-tags.component.css
@@ -1,3 +1,6 @@
+.bookmark-tags__tags > md-chips-wrap {
+    padding-left: 10px;
+}
 .bookmark-tags__tags .md-chips .md-chip-input-container {
     display: none;
 }
