--- a/myreader-frontend/src/app/js/maintenance/maintenance.component.html
+++ b/myreader-frontend/src/app/js/maintenance/maintenance.component.html
@@ -1,3 +1,5 @@
-<my-maintenance-actions></my-maintenance-actions>
-<md-divider></md-divider>
-<my-about></my-about>
+<div class="admin-maintenance">
+    <my-maintenance-actions></my-maintenance-actions>
+    <md-divider></md-divider>
+    <my-about></my-about>
+</div>
