--- a/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscribe/subscribe.component.html
@@ -1,4 +1,4 @@
-<form name="subscriptionForm">
+<form name="subscriptionForm" class="subscribe-form">
     <md-input-container class="md-block">
         <label>Url</label>
         <input autocomplete="off"
