--- a/myreader-frontend/src/app/js/subscription/subscription.component.html
+++ b/myreader-frontend/src/app/js/subscription/subscription.component.html
@@ -1,4 +1,4 @@
-<form name="subscriptionForm" ng-if="$ctrl.subscription">
+<form name="subscriptionForm" class="subscription-form" ng-if="$ctrl.subscription">
     <md-input-container class="md-block">
         <label>Title</label>
         <input name="title"
