--- a/myreader-frontend/src/templates/navigation-admin.html
+++ b/myreader-frontend/src/templates/navigation-admin.html
@@ -23,5 +23,5 @@
     </md-toolbar>
 
     <my-toast></my-toast>
-    <md-content class="my-content" ui-view="content" md-scroll-y flex layout-padding></md-content>
+    <md-content class="my-content" ui-view="content" md-scroll-y flex></md-content>
 </div>
