--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -1,51 +1,53 @@
-<form name="feedForm">
-    <md-input-container class="md-block">
-        <label>Title</label>
-        <input name="title"
-               autocomplete="off"
-               ng-model="$ctrl.feed.title"
-               my-backend-validation my-validations="$ctrl.validations">
+<div class="admin-feed-form">
+    <form name="feedForm">
+        <md-input-container class="md-block">
+            <label>Title</label>
+            <input name="title"
+                   autocomplete="off"
+                   ng-model="$ctrl.feed.title"
+                   my-backend-validation my-validations="$ctrl.validations">
 
-        <my-validation-message my-form-control="feedForm.title"></my-validation-message>
-    </md-input-container>
+            <my-validation-message my-form-control="feedForm.title"></my-validation-message>
+        </md-input-container>
 
-    <md-input-container md-no-float class="md-icon-float md-icon-right md-block">
-        <label>Url</label>
-        <input name="url"
-               autocomplete="off"
-               ng-model="$ctrl.feed.url"
-               my-backend-validation my-validations="$ctrl.validations">
+        <md-input-container md-no-float class="md-icon-float md-icon-right md-block">
+            <label>Url</label>
+            <input name="url"
+                   autocomplete="off"
+                   ng-model="$ctrl.feed.url"
+                   my-backend-validation my-validations="$ctrl.validations">
 
-        <a ng-href="{{$ctrl.feed.url}}" target="_blank" rel="noopener noreferrer">
-            <my-icon class="my-feed__url-icon"
-                     my-type="open-in-new">
-            </my-icon>
-        </a>
+            <a ng-href="{{$ctrl.feed.url}}" target="_blank" rel="noopener noreferrer">
+                <my-icon class="my-feed__url-icon"
+                         my-type="open-in-new">
+                </my-icon>
+            </a>
 
-        <my-validation-message my-form-control="feedForm.url"></my-validation-message>
-    </md-input-container>
+            <my-validation-message my-form-control="feedForm.url"></my-validation-message>
+        </md-input-container>
 
-    <br>
+        <br>
 
-    <my-button-group layout="row" layout-align="end center">
-        <my-button
-                my-type="primary"
-                my-text="Save"
-                my-on-click="$ctrl.onSave()"
-                my-on-success="$ctrl.onSuccessSave('Feed saved')"
-                my-on-error="$ctrl.onError(error)">
-        </my-button>
-        <my-button
-                my-type="warn"
-                my-text="Delete"
-                my-confirm="true"
-                my-on-click="$ctrl.onDelete()"
-                my-on-success="$ctrl.onSuccessDelete()"
-                my-on-error="$ctrl.onError(error)">
-        </my-button>
-    </my-button-group>
-</form>
+        <my-button-group layout="row" layout-align="end center">
+            <my-button
+                    my-type="primary"
+                    my-text="Save"
+                    my-on-click="$ctrl.onSave()"
+                    my-on-success="$ctrl.onSuccessSave('Feed saved')"
+                    my-on-error="$ctrl.onError(error)">
+            </my-button>
+            <my-button
+                    my-type="warn"
+                    my-text="Delete"
+                    my-confirm="true"
+                    my-on-click="$ctrl.onDelete()"
+                    my-on-success="$ctrl.onSuccessDelete()"
+                    my-on-error="$ctrl.onError(error)">
+            </my-button>
+        </my-button-group>
+    </form>
 
-<div>
-    <my-feed-fetch-error-panel my-id="$ctrl.feed.uuid" my-on-error="$ctrl.onError(error)"></my-feed-fetch-error-panel>
+    <div>
+        <my-feed-fetch-error-panel my-id="$ctrl.feed.uuid" my-on-error="$ctrl.onError(error)"></my-feed-fetch-error-panel>
+    </div>
 </div>
