--- a/myreader-frontend/src/app/js/navigation/subscription-item/subscription-item.component.css
+++ b/myreader-frontend/src/app/js/navigation/subscription-item/subscription-item.component.css
@@ -1,23 +1,27 @@
-.my-navigation-dynamic__item {
+.my-subscription-item {
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.my-subscription-item--selected {
     background-color: #e5e5e5;
 }
 
-.my-navigation-dynamic__item-title-container {
+.my-subscription-item__title-container {
     display: flex;
     flex-direction: row;
 }
 
-.my-navigation-dynamic__item-subscription {
+.my-subscription-item__title {
+    flex-grow: 1;
+}
+
+.my-subscription-item__subscription-title {
     flex-grow: 1;
     padding: 0 16px 0 16px;
     text-transform: none;
 }
 
-.my-navigation-dynamic__item-tag {
-    flex-grow: 1;
-}
-
-.my-navigation-dynamic__item-badge {
+.my-subscription-item__badge {
     display: inline-block;
     min-width: 10px;
     padding: 3px 7px;
