--- a/myreader-frontend/src/app/js/navigation/subscription-item/subscription-item.component.html
+++ b/myreader-frontend/src/app/js/navigation/subscription-item/subscription-item.component.html
@@ -1,26 +1,26 @@
-<li ng-class="{'my-navigation-dynamic__item': $ctrl.isSelected($ctrl.item)}"
-    ng-hide="$ctrl.isInvisible($ctrl.item)">
-
-    <md-button md-no-ink ng-click="$ctrl.onSelect($ctrl.item.tag, $ctrl.item.uuid)">
-        <div class="my-navigation-dynamic__item-title-container">
-            <div class="my-navigation-dynamic__item-tag">{{$ctrl.item.title}}</div>
-            <div ng-if="$ctrl.item.unseen">
-                <span class="my-navigation-dynamic__item-badge">{{$ctrl.item.unseen}}</span>
+<li class="my-subscription-item"
+    ng-class="{'my-subscription-item--selected': $ctrl.isSelected($ctrl.item)}">
+    <md-button md-no-ink
+               ng-click="$ctrl.onSelect($ctrl.item.tag, $ctrl.item.uuid)">
+        <div class="my-subscription-item__title-container">
+            <div class="my-subscription-item__title">{{$ctrl.item.title}}</div>
+            <div>
+                <span class="my-subscription-item__badge">{{$ctrl.item.unseen}}</span>
             </div>
         </div>
     </md-button>
 </li>
 
-<ul class="my-navigation-dynamic__sub-menu" ng-show="$ctrl.isOpen()">
+<ul ng-if="$ctrl.isVisible()">
     <li ng-repeat="subscription in $ctrl.item.subscriptions track by $ctrl.trackBy(subscription)"
-        ng-hide="$ctrl.isInvisible(subscription)"
-        ng-class="{'my-navigation-dynamic__item': $ctrl.isSelected(subscription)}">
+        ng-class="{'my-subscription-item--selected': $ctrl.isSelected(subscription)}">
 
-        <md-button  md-no-ink ng-click="$ctrl.onSelect(subscription.tag, subscription.uuid)">
-            <div class="my-navigation-dynamic__item-title-container">
-                <div class="my-navigation-dynamic__item-subscription">{{subscription.title}}</div>
-                <div  ng-if="subscription.unseen">
-                    <span class="my-navigation-dynamic__item-badge">{{subscription.unseen}}</span>
+        <md-button md-no-ink
+                   ng-click="$ctrl.onSelect(subscription.tag, subscription.uuid)">
+            <div class="my-subscription-item__title-container">
+                <div class="my-subscription-item__subscription-title">{{subscription.title}}</div>
+                <div>
+                    <span class="my-subscription-item__badge">{{subscription.unseen}}</span>
                 </div>
             </div>
         </md-button>
