--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -1,4 +1,4 @@
-<md-sidenav layout="column" class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+<md-sidenav layout="column" class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isDesktop">
     <md-toolbar></md-toolbar>
 
     <md-content flex>
