Move navigation related styles to app.component.css.

--- a/myreader-frontend/src/app/js/app.component.html
+++ b/myreader-frontend/src/app/js/app.component.html
@@ -43,5 +43,5 @@
     </md-toolbar>
 
     <my-toast></my-toast>
-    <md-content class="my-content" ui-view="content" flex></md-content>
+    <md-content ui-view="content"></md-content>
 </div>
