--- a/myreader-frontend/src/app/js/navigation/subscriptions-item/subscriptions-item.component.html
+++ b/myreader-frontend/src/app/js/navigation/subscriptions-item/subscriptions-item.component.html
@@ -1,11 +1,9 @@
 <my-navigation-subscription-item
         ng-repeat="item in $ctrl.subscriptionsGroupedByTag track by $ctrl.trackBy(item)"
-        my-item="item"
-        my-on-select="$ctrl.myOnSelect()">
+        my-item="item">
 </my-navigation-subscription-item>
 
 <my-navigation-subscription-item
         ng-repeat="item in $ctrl.subscriptionsWithoutTag track by $ctrl.trackBy(item)"
-        my-item="item"
-        my-on-select="$ctrl.myOnSelect()">
+        my-item="item">
 </my-navigation-subscription-item>
