Deactivate text selection on elements with .md-title class.

--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -1,8 +1,12 @@
 /* remove dotted outline on buttons in firefox */
 :focus {
-    outline:none;
+    outline: none;
 }
 
 ::-moz-focus-inner {
-    border:0;
+    border: 0;
+}
+
+.md-title {
+    user-select: none;
 }
