Replace FeedFetchErrorService with Redux exchange middleware.

--- a/myreader-frontend/src/app/js/feed/feed.component.html
+++ b/myreader-frontend/src/app/js/feed/feed.component.html
@@ -47,7 +47,6 @@
         </my-button-group>
     </form>
 
-    <div>
-        <my-feed-fetch-error-panel my-id="$ctrl.feed.uuid" my-on-error="$ctrl.onError(error)"></my-feed-fetch-error-panel>
-    </div>
+    <h2 class="md-title">Fetch errors</h2>
+    <my-feed-fetch-error></my-feed-fetch-error>
 </div>
