--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    flex-direction: row;
+}
+
 /* remove dotted outline on buttons in firefox */
 :focus {
     outline: none;
